#41 fix responsive issues related to margins/paddings, alignment, links behaviour (mobile devices)

--- a/src/components/header-nav/header-nav.scss
+++ b/src/components/header-nav/header-nav.scss
@@ -91,6 +91,10 @@
     color: inherit;
     text-decoration: none;
 
+    @media (min-width: 950px) and (max-width: 1100px) {
+      pointer-events: none;
+    }
+
     &_active {
       font-weight: 700;
     }
