--- a/src/components/landing-page/landing-page.scss
+++ b/src/components/landing-page/landing-page.scss
@@ -18,6 +18,12 @@
     padding-right: 134px;
     padding-top: 70px;
 
+    @media (max-width: 1100px) {
+      min-height: 0;
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+
     @media (max-width: 600px) {
       display: flex;
       flex-direction: column;
@@ -32,10 +38,15 @@
   &__form {
     margin-bottom: 296px;
 
+    @media (max-width: 1100px) {
+      margin-bottom: 100px;
+    }
+
     @media (max-width: 600px) {
       display: flex;
       justify-content: center;
       margin: 0;
+      margin-bottom: 30px;
     }
   }
 
@@ -48,7 +59,8 @@
     color: $dark-75;
 
     @media (max-width: 600px) {
-      display: none;
+      text-align: center;
+      align-self: center;
     }
   }
 }
