--- a/src/components/room-details/room-details.scss
+++ b/src/components/room-details/room-details.scss
@@ -34,9 +34,16 @@
 
   &__main-block {
     margin-right: 25px;
+    margin-bottom: 61px;
 
     @media (max-width: 1150px) {
       margin-right: 0;
+      margin-bottom: 50px;
+    }
+
+    @media (max-width: 450px) {
+      margin-right: 0;
+      margin-bottom: 30px;
     }
   }
 
@@ -61,7 +68,7 @@
 
     @media (max-width: 750px) {
       flex-direction: column;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
   }
 
@@ -70,7 +77,7 @@
 
     @media (max-width: 750px) {
       margin-right: 0;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
   }
 
@@ -100,6 +107,7 @@
     @media (max-width: 550px) {
       display: flex;
       flex-direction: column;
+      margin-bottom: 30px;
     }
   }
 
@@ -174,10 +182,6 @@
       grid-column: 2 / 3;
       grid-row: 2/ 3;
     }
-  }
-
-  &__room-restrictions {
-    margin-bottom: 61px;
   }
 
   &__room-reviews {
