--- a/src/components/room-restrictions/room-restrictions.scss
+++ b/src/components/room-restrictions/room-restrictions.scss
@@ -32,6 +32,7 @@
 
     @media (max-width: 700px) {
       margin-right: 0;
+      margin-bottom: 30px;
     }
   }
 
