--- a/src/components/rooms-grid/rooms-grid.scss
+++ b/src/components/rooms-grid/rooms-grid.scss
@@ -6,11 +6,10 @@
     margin-top: 16px;
 
     @media (max-width: 1439px) {
-      text-align: right;
+      text-align: center;
     }
 
     @media (max-width: 850px) {
-      text-align: center;
       font-size: 17px;
     }
   }
@@ -22,7 +21,7 @@
     margin-bottom: 42px;
 
     @media (max-width: 1439px) {
-      justify-content: end;
+      justify-content: center;
     }
 
     @media (max-width: 850px) {
