--- a/src/components/search-room/search-room.scss
+++ b/src/components/search-room/search-room.scss
@@ -41,5 +41,9 @@
 
   &__filter {
     margin-top: 18px;
+
+    @media (max-width: 600px) {
+      margin-right: 20px;
+    }
   }
 }
